fixed about heading spacing, updated skills

--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -96,9 +96,7 @@
     
     @media (min-width: 768px) {
     
-        .aboutContainer {
-            margin-top: 80px; 
-        }
+      
         
     
     
